# parserRule

./: main.py  pyproject.toml
utils/: __init__.py  parser_rule.py  read_files.py
