[tool.poetry]
name = "parserrule"
version = "0.1.0"
description = ""
authors = ["''"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
customtkinter = "^5.2.2"
xlsxwriter = "^3.2.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
blue = "^0.9.1"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.blue]
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 9
